base definitions: set examples refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -664,7 +664,10 @@ subset:
 
 \begin{example}[Surjection]
 An example of a surjective function is shown in \cref{fig:surjection}.
-Note that the function in the figure is not an \mynameref{def:injection}.
+Note that the function in the figure is not an
+\mynameref{def:injection}. You can find an example of a function that
+is \mynameref{def:surjection} as well as \mynameref{def:injection} (aka
+\mynameref{def:bijection}) in \cref{fig:bijection}.
 \begin{figure}[H]
   \centering
   \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
@@ -778,7 +781,10 @@ Note that the function in the figure is not an \mynameref{def:injection}.
 % https://tex.stackexchange.com/questions/19987/
 % drawing-a-bijective-map-with-tikz 
 An example of an injective function is shown in \cref{fig:injection}.
-Note that the function in the figure is not a \mynameref{def:surjection}.
+Note that the function in the figure is not a
+\mynameref{def:surjection}. You can find an example of a function that
+is \mynameref{def:surjection} as well as \mynameref{def:injection} (aka
+\mynameref{def:bijection}) in \cref{fig:bijection}.
 \begin{figure}[H]
   \centering
   \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
@@ -912,6 +918,7 @@ Note that the function in the figure is not a \mynameref{def:surjection}.
 
 \begin{definition}[Bijection]
   \label{def:bijection}
+  \index{``one-to-one'' correspondence}
   The function $f: X \rightarrow Y$ is bijective (or ``one-to-one''
   correspondence) if it is an \mynameref{def:injection} and a
   \mynameref{def:surjection} (see \cref{fig:bijection}). 
