C++ mark has been changed

--- a/functors.tex
+++ b/functors.tex
@@ -89,10 +89,10 @@ In Scala it can be defined in the same way
   }\end{minted} 
 \end{example}
 
-In C++ the definition differs
-\begin{example}[Functor][$\cat{C++}$]
+In C\texttt{++} the definition differs
+\begin{example}[Functor][$\cat{C\texttt{++}}$]
   \label{ex:functor_cpp}
-  In C++ templates can be considered as type constructors in Haskell
+  In C\texttt{++} templates can be considered as type constructors in Haskell
   and therefore can convert one type for another. For instance the
   list of strings can be got with the following construction:
 
