--- a/kleisli.tex
+++ b/kleisli.tex
@@ -152,9 +152,9 @@ Nothing
 
 \end{example}
 
-\subsection{C++ example}
+\subsection{C\texttt{++} example}
 
-\begin{example}[Maybe monad][$\cat{C++}$]
+\begin{example}[Maybe monad][$\cat{C\texttt{++}}$]
 \label{ex:maybe_monad_cpp}
 The Maybe monad can be implemented as follows
 \begin{minted}{c++}
