--- a/monads.tex
+++ b/monads.tex
@@ -720,8 +720,8 @@ ma >>= f = join ( fmap f ma )
 
 \end{example}
 
-\subsection{C++}
-The monad in C++ use the functor definition from \mynameref{ex:functor_cpp}
+\subsection{C\texttt{++}}
+The monad in C\texttt{++} use the functor definition from \mynameref{ex:functor_cpp}
 \begin{minted}{c++}
 // from functor.h
 template < template< class ...> class M, class A, class B> 
