--- a/introduction.tex
+++ b/introduction.tex
@@ -29,12 +29,12 @@ theory and category theory are very close related. Each one can be
 considered as an alternative view to another one.
 
 There are also a lot of examples from programming languages which include
-Haskell, Scala, C++. The source files for programming languages 
-examples (Haskell, C++, Scala) can be found on github repositories:
+Haskell, Scala, C\texttt{++}. The source files for programming languages 
+examples (Haskell, C\texttt{++}, Scala) can be found on github repositories:
 \begin{itemize}
 \item Haskell: \cite{github:cattheory_hs_examples}
 \item Scala: \cite{github:cattheory_scala_examples}
-\item C++: \cite{github:cattheory_cpp_examples}
+\item C\texttt{++}: \cite{github:cattheory_cpp_examples}
 \end{itemize}
 
 The examples from physics are related to quantum mechanics that is the
