--- a/notations.tex
+++ b/notations.tex
@@ -8,7 +8,7 @@
 \nomenclature{$\cat{FdHilb}$}{\mynameref{def:fdhilbcategory}}
 \nomenclature{$\cat{Hask}$}{\mynameref{def:haskcategory}}
 \nomenclature{$\cat{Scala}$}{\mynameref{def:scalacategory}}
-\nomenclature{$\cat{C++}$}{\mynameref{def:cppcategory}}
+\nomenclature{$\cat{C\texttt{++}}$}{\mynameref{def:cppcategory}}
 \nomenclature{$\cat{Cat}$}{\mynameref{def:catcategory}}
 \nomenclature{$a, b$}{\mynameref{def:object}s (Latin small letters)}
 \nomenclature{$f, g, h$}{\mynameref{def:morphism} (\mynameref{def:arrow}) (Latin small
