quantum mechanics example

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1225,7 +1225,7 @@ with 3 \mynameref{def:object}s that are types: \textbf{Int}, \textbf{Bool},
 \label{sec:qmcategory_example}
 The most critical property of quantum system is the superposition
 principle. The \mynameref{def:setcategory} cannot be used for it
-because it does not satisfy the principle. but a simple modification
+because it does not satisfy the principle but a simple modification
 of the $\cat{Set}$ category does. 
 \begin{definition}[$\cat{Rel}$ category]
   \label{def:relcategory}
