quantum mechanics example

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1248,7 +1248,11 @@ of the $\cat{Set}$ category does.
   superposition that is analogiest to quantum systems.
 \end{definition}
 
-In the quantum mechanics we say about Hilber spaces.
+In the quantum mechanics we say about Hilber spaces that is vector
+space under field of complex numbers $\mathbb{C}$.
+
+
+
 \begin{definition}[Hilbert space]
   \label{def:hilbert_space} The Hilbert space is a complex vector space
   with an inner product as a complex number ($\mathbb{C}$).
@@ -1286,7 +1290,7 @@ the structure is called
 linear map or linear transformations.
 \begin{definition}[Linear map]
 \label{def:linear_map}
-The linear map between2 \mynameref{def:hilbert_space}s $\mathcal{A}$
+The linear map between 2 \mynameref{def:hilbert_space}s $\mathcal{A}$
 and $\mathcal{B}$ is a mapping $f: \mathcal{A} \to \mathcal{B}$ that
 preserves additions  
 \[
@@ -1296,7 +1300,7 @@ and scalar multiplications:
 \[
 f(c \cdot a) = c \cdot f(a)
 \]
-where $a,a_{1,2} \in \mathcal{A}$ and $f(a), f(a_{1,2}) \in \mathcal{B}$.
+where $a,a_1,a_2 \in \mathcal{A}$ and $f(a), f(a_1), f(a_2) \in \mathcal{B}$.
 \end{definition}
 
 \begin{remark}[Linear map]
