--- a/cattheory.tex
+++ b/cattheory.tex
@@ -368,6 +368,7 @@
 \input ./limits.tex
 \input ./yoneda.tex
 \input ./topos.tex
+\input ./appendices.tex
 
 \printindex
 \bibliographystyle{gost780s}
