--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1248,14 +1248,16 @@ of the $\cat{Set}$ category does.
   superposition that is analogiest to quantum systems.
 \end{definition}
 
-In the quantum mechanics we say about Hilber spaces that is vector
-space under field of complex numbers $\mathbb{C}$.
+In the quantum mechanics we say about Hilber spaces that is 
+a \mynameref{def:vectorspace} under \mynameref{def:field} of complex
+numbers $\mathbb{C}$. 
 
 
 
 \begin{definition}[Hilbert space]
-  \label{def:hilbert_space} The Hilbert space is a complex vector space
-  with an inner product as a complex number ($\mathbb{C}$).
+  \label{def:hilbert_space} The Hilbert space is a complex
+  \mynameref{def:vectorspace} with an inner product as a complex
+  number ($\mathbb{C}$). 
 
   Later we will consider only finite dimensional Hilber spaces.
   We will denote a Hilbert space of dimensional $n$ as
