--- a/introduction.tex
+++ b/introduction.tex
@@ -19,7 +19,8 @@ results from the category theory such as Yoneda's lemma (see
 introduction to the topos theory i.e. just another view of the
 \mynameref{def:set}s.
 
-There are a lot of examples in each chapter. The examples cover different category
+There are a lot of examples in each chapter. The examples cover
+different category 
 theory application areas. We assume that the reader is familiar with
 the corresponding area and the example(s) can be passed if not. I.e.
 anyone can choose the suitable example(s) for (s)he. 
@@ -40,6 +41,11 @@ examples (Haskell, C\texttt{++}, Scala) can be found on github repositories:
 The examples from physics are related to quantum mechanics that is the
 most known for me. For the examples We were inspired by the Bob Coecke
 article \cite{bib:arxiv:Bob_Coecke_2008}.
+
+There is also additional material related to abstract algebra (see
+\cref{sec:abstractalgebra}) taken from
+\cite{github:galois_ivanmurashko}. The material describes the
+different math constructions used in the book.
 
 The text is distributed under \textbf{Creative Common Public License}
 (see the text of the license at the end of the book)
