--- a/monads.tex
+++ b/monads.tex
@@ -330,7 +330,8 @@ m \cong_\rho m \times t
 \index{Field}
 Why is the concept of \mynameref{def:monoid_category} so important? 
 In pure math it provides the build blocks for important concepts such as
-Group, Ring, Field \cite{github:galois_ivanmurashko}. In programming
+\mynameref{def:group}, \mynameref{def:ring}, \mynameref{def:field}
+\cite{github:galois_ivanmurashko}. In programming 
 languages it gives more simple and robust concept for software
 design \cite{bib:scalable_program_arch}.
 
