--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -11,8 +11,8 @@ if they contain the equivalent collection of elements. Unfortunately
 we cannot do the same trick for categorical \mynameref{def:object}s as
 soon as they don't have any internal 
 structure but can use a \mynameref{def:categorical_approach} (see 
-\mynameref{rem:set_vs_category}): if we cannot use ``microscope'' lets
-use ``telescope'' and define the equality of objects and morphisms of
+\mynameref{rem:set_vs_category}) i.e. if we cannot use a ``microscope'' lets
+use a ``telescope'' and define the equality of objects and morphisms of
 a category $\cat{C}$ in the terms of whole $\cathom{C}$.
 
 \begin{definition}[Objects equality]
