--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -53,8 +53,8 @@ As an example lets proof the following theorem
 The \mynameref{def:id} is unique.
 \begin{proof}
 Consider an \mynameref{def:object} $a$ and it's \mynameref{def:id} 
-$\idm{a}$. Let $\exists f: a \to a$ such that $f$ is also
-identity. In the case \eqref{eq:leftid} for $f$ as identity gives
+$\idm{a}$. Assume existence of a function $f: a \to a$ such that $f$ is also
+identity. \eqref{eq:leftid}, for $f$ as identity, gives us
 \[
 f \circ \idm{a} = \idm{a}.
 \]
