--- a/notations.tex
+++ b/notations.tex
@@ -2,6 +2,7 @@
 \renewcommand{\nomname}{Notations}
 \nomenclature{$\forall$}{for all}
 \nomenclature{$\exists$}{exists}
+\nomenclature{$\exists"!$}{exists exactly one}
 \nomenclature{$\Ima{f}$}{\mynameref{def:function_image} of the
   function $f$}
 \nomenclature{$\cat{Set}$}{\mynameref{def:setcategory}}
