--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -216,7 +216,7 @@ Let we have a category $\cat{C}$ and $c_1, c_2 \in \catob{C}$ -two
 \mynameref{def:object}s then the product of the objects $c_1, c_2$ is
 another object in $\cat{C}$ $c = c_1 \times c_2$ with 2
 \mynameref{def:morphism}s $\pi_1, \pi_2$ such that $c_1 = \pi_1(c),
-c_2 = \pi(c_2)$ and the  
+c_2 = \pi(c)$ and the  
 following universal property is satisfied: $\forall c' \in \catob{C}$
 and morphisms $\pi'_1: c' \to c_1, \pi'_2: c' \to c_2$, exists unique
 morphism $h$ such that the following diagram (see \cref{fig:product})
